# claudetest3

./: .gitignore  BEVY_RESOURCES.md  BLANK_SCREEN_FIX.md  CAMERA_CONTROL_CLI.md  CAMERA_FIXES_FINAL.md  CAMERA_FIXES_SUMMARY.md  CAMERA_ZOOM_BUG_ANALYSIS.md  CLAUDE.md  CULLING_DISABLED_ISSUE.md  CULLING_FIX_SUMMARY.md  Cargo.toml  DEBUGGING_TOOLS_SUMMARY.md  INDEX.md  ISOMETRIC_CULLING_DESIGN.md  ISOMETRIC_CULLING_FIX.md  PERFORMANCE_IMPROVEMENTS.md  PHASE_4_REVIEW.md  README.md  TEST_COVERAGE_SUMMARY.md  analyze_tile_coverage.py  capture_zoom.py  run_culling_test.sh  test_2d_mesh_direct.rs  test_2d_rendering.rs  test_2d_working.rs  test_absolute_minimal.rs  test_basic_2d.rs  test_camera_2d_issue.rs  test_camera_render.rs  test_camera_z_position.rs  test_color_alpha.rs  test_debug_tiles.rs  test_diagnostic.rs  test_direct_game.rs  test_direct_tiles.rs  test_edges.sh  test_exact_tile_mesh.rs  test_final_issue.rs  test_game_camera_exact.rs  test_game_no_menu.rs  (+19 more)
docs/: ISOMETRIC_MAP_DESIGN.md  TILE_RENDERING_INVESTIGATION.md
examples/: calculate_full_view_scale.rs  debug_black_screen.rs  debug_coordinates.rs  debug_culling.rs  debug_culling_issue.rs  debug_edge_tiles.rs  debug_isometric_culling.rs  direct_play.rs  mesh2d_demo.rs  test_black_screen_fix.rs  test_camera_fixes.rs  test_intermediate_zoom.rs  test_max_zoom.rs  test_menu_transition.rs  test_min_zoom.rs  test_new_culling.rs  test_zoom_culling.rs  test_zoom_edges.rs  test_zoom_edges_simple.rs  test_zoom_issue.rs  view_culling_demo.rs  visual_culling_test.rs
logs/: debug_log_1749307758.txt
src/: constants.rs  lib.rs  main.rs  test_camera_zoom_issue.rs  test_view_culling.rs  test_zoom_fix.rs
src/game/: mod.rs  state.rs
src/logging/: README.md  components.rs  mod.rs  screenshot.rs  systems.rs  writer.rs
src/testing/: README.md  camera_controls.rs  debug_overlay.rs  mod.rs  screenshot.rs
src/ui/: README.md  components.rs  mod.rs  styles.rs  systems.rs
src/ui/panels/: components.rs  info_panel.rs  mod.rs  top_bar.rs  (+1 more)
tests/: culling_algorithm_test.rs  integration_culling_test.rs  logging_test.rs
(+27 files in other folders)
