[package]
name = "claudetest3"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16"
noise = "0.9"
chrono = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "test_tile_coverage_unconstrained"
path = "src/bin/test_tile_coverage_unconstrained.rs"

[[bin]]
name = "test_edge_tiles"
path = "src/bin/test_edge_tiles.rs"
